Fixing name overlap on load, and fixing intinite load mobile tilt

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -274,9 +274,16 @@ footer {
   max-width: 100%;
   display: block;
   flex: 0 0 33.333333%;
+  
+  height: 100vw;
+  
+  @include for-tablet-landscape-up{
+	  height: 33.33333vw;
+  }
 
   @include for-big-desktop-up {
     flex: 0 0 25%;
+	
   }
 
   span {
